Update to stable39